@@ -1,3 +1,5 @@
+Use a generic route logger.
+Fix static route netmask calculation and applicaton.
 Use --nodeps when restarting services.
 Simply CIDR calculation, thanks to Francois-Xavier Le Bail.
 Don't free the dhcp object on RENEW (fixes a segfault).
